--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+
   <body>
     <!-- header -->
 
     <header>
-      <a href=""><img src="./index.html"</a>
+      <a href="./index.html"
+        ><img src="./img/logo.png" alt="logo" width="66" height="52"
+      /></a>
       <nav>
         <ul>
           <li><a href="">Home</a></li>
@@ -24,6 +27,23 @@
     </header>
     <!-- Mein -->
     <main>
+      <!-- Hero -->
+      <section>
+        <h1>Enjoy Your Favorite Food From Anywhere</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+          varius enim in eros elementum tristique. Duis cursus, mi quis viverra
+          ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.
+        </p>
+        <button type="button">Order Now</button>
+        <img
+          src="./img/heder-tefleli.jpg"
+          alt="food"
+          width="608"
+          height="580"
+        />
+      </section>
+
       <!-- Offerings -->
       <section>
         <h2>What’s Special About Our Offerings</h2>
@@ -49,6 +69,84 @@
         </ul>
         <button type="button">Order Now</button>
       </section>
+      <!-- Favorites -->
+
+      <setion>
+        <h2>Some of Our Favorites</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <ul>
+          <li>
+            <a href=""><img src="./img/gamburger.jpg" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./img/Pasta.jpg" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./img/pizza.jpg" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./img/chicken.jpg" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./img/salat.jpg" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./img/borshch.jpg" alt="" /></a>
+          </li>
+        </ul>
+      </setion>
+      <!-- Customers -->
+
+      <h2>What our Customers Say</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <ul>
+        <li>
+          <p>
+            “The Best app I have used to order food in a while, so many options
+            to choose from too, I would recommend to a freind, No questions
+            asked”
+          </p>
+          <img src="./img/custamer-1.jpg" alt="customer" />
+          <h3>Sumith Shah</h3>
+          <p>Some Dude</p>
+        </li>
+        <li>
+          <p>
+            “The ease with which I can just go in and order what i want was
+            amazing, It has been a very pleasant experience ordering from this
+            app”
+          </p>
+          <img src="./img/custamer-2.jpg" alt="customer second" />
+          <h3>Sumith Shah</h3>
+          <p>Some Dude</p>
+        </li>
+      </ul>
+      <h2>Subscribe To Get Special Offers</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+        varius enim in eros elementum tristique.
+      </p>
+      <button type="">Subscribe</button>
+      <img src="./img/banan.jpg" alt="banan" />
     </main>
+    <!-- Footer -->
+    <a href="./index.html"
+      ><img src="./img/logo.png" alt="logo" width="66" height="52" />
+    </a>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Service</li>
+      <li>Menu</li>
+      <li>Contact</li>
+    </ul>
+    <p>Subscribe</p>
+
+    <ul>
+      <li><a href="">Privacy Policy</a></li>
+      <li><a href="">Terms of Service</a></li>
+      <li><a href="">Cookies Settings</a></li>
+    </ul>
+    <p>2022 FoodSta. All right reserved.</p>
   </body>
 </html>
