--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <a href=""><img src="./img/gamburger.jpg" alt="" /></a>
           </li>
           <li>
-            <a href=""><img src="./img/Pasta.jpg" alt="" /></a>
+            <a href=""><img src="./img/pasta.jpg" alt="" /></a>
           </li>
           <li>
             <a href=""><img src="./img/pizza.jpg" alt="" /></a>
@@ -106,7 +106,7 @@
             to choose from too, I would recommend to a freind, No questions
             asked”
           </p>
-          <img src="./img/custamer-1.jpg" alt="customer" />
+          <img src="./img/custamer1.jpg" alt="customer" />
           <h3>Sumith Shah</h3>
           <p>Some Dude</p>
         </li>
@@ -116,7 +116,7 @@
             amazing, It has been a very pleasant experience ordering from this
             app”
           </p>
-          <img src="./img/custamer-2.jpg" alt="customer second" />
+          <img src="./img/custamer2.jpg" alt="customer second" />
           <h3>Sumith Shah</h3>
           <p>Some Dude</p>
         </li>
